# timelock

./: .gitignore  Cargo.toml  HEADER  README.md  rustfmt.toml
.github/: copilot-instructions.md
.github/workflows/: cross-platform-ffi.yml
DocsTemp/: BUILD_SYSTEM_SUMMARY.md  CI_HEADER_AVAILABILITY_FIX.md  CMAKELIST_FIX_SUMMARY.md  CROSS_PLATFORM_BUILD_ORGANIZATION.md  CROSS_PLATFORM_TESTING.md  C_HEADER_COMPATIBILITY_FIX.md  ENHANCED_EXAMPLES_SUMMARY.md  ENHANCED_TEST_SUITE_SUMMARY.md  ENVIRONMENT_SETUP.md  FFI_COMPLETION_SUMMARY.md  FFI_IMPLEMENTATION_SUMMARY.md  FINAL_ENHANCED_EXAMPLES_SUMMARY.md  LATEST_COPILOT_FIXES_SUMMARY.md  PULL_REQUEST_SUMMARY.md
docs/: tlock.md
examples/python/: drand_tlock.py
examples/timelock-ffi/: .gitignore  BUILDING.md  CMakeLists.txt  Makefile  README.md  basic_cpp_example.cpp  basic_example.c  timelock-ffi.pc.in
examples/web/react-tlock-demo/: README.md  package-lock.json  package.json
examples/web/react-tlock-demo/src/: App.js
py/: README.md  pyproject.toml  setup.py
py/src/examples/: drand_tlock.py
py/src/timelock/: timelock.py
py/src/timelock.egg-info/: PKG-INFO
scripts/: README.md  build-ffi-component.bat  build-ffi.bat  build-ffi.sh  test-component-target.bat  test-docker.sh
scripts/unix/: build-all-examples.sh  build-ffi.sh  compile-basic.sh  compile-enhanced.sh  compile-error-handling.sh
scripts/windows/: build-ffi-legacy.bat  build-ffi.ps1  build_all_examples.bat  compile_clean.bat  compile_enhanced.bat  setup-vs-env.bat
timelock/: Cargo.toml  README.md
timelock-ffi/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  test_constants.rs
timelock-ffi/src/: lib.rs  test_constants.rs  tests.rs
timelock/benches/: benches.md  tlock.rs
timelock/src/: block_ciphers.rs  lib.rs  stream_ciphers.rs  tlock.rs
timelock/src/curves/: drand.rs  mod.rs
timelock/src/engines/: drand.rs  engine.rs  mod.rs
timelock/src/ibe/: README.md  fullident.rs  mod.rs  utils.rs
ts/: README.md  babel.config.js  babel.config.ts  jest-wasm-transform.js  jest.config.mjs  package-lock.json  package.json  testSetup.ts  tsconfig.json  vitest.config.js
ts/examples/node-tlock-demo/: index.js  package.json
ts/examples/react-auction/: README.md
ts/examples/react-auction/src/: App.css
ts/examples/react-tlock/: craco.config.js  package.json
ts/examples/react-tlock-demo/: README.md  config-overrides.d.ts  config-overrides.js  package-lock.json  package.json
ts/examples/react-tlock-demo/public/: index.html
ts/examples/react-tlock-demo/src/: App.d.ts  App.js  reportWebVitals.d.ts
ts/examples/react-tlock/src/: App.js
ts/src/: index.js  index.ts  timelock.test.spec.ts  timelock.ts  tle.js  tle.test.spec.js  tle.test.spec.ts  tle.ts
ts/src/interfaces/: DrandIdentityBuilder.ts  IDNIdentityBuilder.ts  IIdentityBuilder.ts
ts/src/test/__mocks__/: timelock-wasm-wrapper.ts
ts/test-results/: .last-run.json
wasm/: Cargo.toml  README.md  wasm_build.sh  wasm_build_py.sh
wasm/src/: js.rs  lib.rs  py.rs
