[workspace]
members = ["timelock", "wasm", "timelock-ffi"]
resolver = "2"


[workspace.package]
edition = "2021"
authors = ["Ideal Labs <hello@idealabs.network>"]
repository = "https://github.com/ideal-lab5/timelock"
homepage = "https://idealabs.network"
license = "Apache-2.0"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

[workspace.metadata.release]
dependent-version = "fix"

[workspace.dependencies]

# local
timelock = { path = "./timelock", default-features = false }

# encoding
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
    "derive",
    "max-encoded-len",
] }
scale-info = { version = "2.5.0", default-features = false, features = [
    "derive",
] }
array-bytes = "6.1.0"
generic-array = "0.14.7"

# serialization
serde = { version = "1.0.204", default-features = false, features = [
    "derive",
    "alloc",
] }

# crypto
aes-gcm = { version = "0.10.2", default-features = false, features = [
    "alloc",
    "aes",
    "rand_core",
] }
sha2 = { version = "0.10.2", default-features = false }
sha3 = { version = "0.10.0", default-features = false }
ark-std = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-poly = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false }
ark-bls12-381 = { version = "0.5.0", features = [
    "curve",
], default-features = false }
ark-bls12-377 = { version = "0.5.0", features = [
    "curve",
], default-features = false }

# entropy
rand_chacha = { version = "0.3.0", default-features = false }
rand = { version = "0.8.5", default-features = false }

# encoding
hex = "0.4.3"

# wasm 
serde-wasm-bindgen = { version = "0.6.5", default-features = false }
wasm-bindgen = "0.2.92"
pyo3 = { version = "0.23.1", features = [
    "extension-module",
    "macros",
], default-features = false }
