[package]
name = "timelock-ffi"
description = "C-compatible FFI bindings for timelock encryption"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
timelock = { path = "../timelock", default-features = false }

# crypto
ark-std.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-serialize.workspace = true
ark-bls12-381.workspace = true
ark-bls12-377.workspace = true
sha2.workspace = true

# serialization
serde.workspace = true

# FFI
libc = "0.2"
hex.workspace = true
zeroize = "1.8"

[dev-dependencies]
hex.workspace = true

[build-dependencies]
cbindgen = "0.26"

[features]
default = ["std"]
std = [
    "timelock/std",
    "sha2/std",
]
