[package]
name = "timelock"
description = "timelock encryption imlementation using BF-IBE"
version = "0.2.0"
edition.workspace =  true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
scale-info.workspace = true
array-bytes.workspace = true
generic-array.workspace = true

# crypto
ark-std.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true
ark-ec.workspace = true
aes-gcm.workspace = true
ark-serialize.workspace = true
ark-bls12-381.workspace = true
ark-bls12-377.workspace = true
sha2.workspace = true
sha3.workspace = true

# serialization
serde.workspace = true
# entropy
rand.workspace = true

[dev-dependencies]
hex = "0.4.3"
simulacrum = "0.3.0"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "tlock"
harness = false

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sha2/std",
    "sha3/std",
    "aes-gcm/std",
    "ark-std/std",
    "ark-ff/std",
    "ark-poly/std",
    "ark-ec/std",
    "ark-serialize/std",
    "ark-bls12-381/std",
    "rand/std",
    "serde/std",
]
