[package]
name = "timelock_wasm_wrapper"
description = "Wasm bidings for the timelock encryption crate"
version = "0.2.0-rc"
edition.workspace =  true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = [
    "cdylib",
    "rlib", 
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
codec.workspace = true
rand_chacha.workspace = true
rand_core.workspace = true
timelock.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
ark-bls12-381.workspace = true
ark-ec.workspace = true
getrandom.workspace = true
sha2.workspace = true
pyo3 = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[features]
default = []
python = ["pyo3"]
